[package]
name = "mooo"
version = "0.1.0"
edition = "2024"
description = "is your btree imoootable?"
repository = "https://git.monke.ca/yarn/MOOODB"
readme = "README.md"
license-file = "LICENSE"
authors = ["yarn"]

[dependencies]
libc = "0.2.183"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zerocopy = { version = "0.8.48", features = ["derive"] }
loom = { version = "0.7.2", optional = true }
shuttle = { version = "0.8.1", optional = true }

[dev-dependencies]
rand = "0.10.1"
tempfile = "3.27.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(shuttle)'] }
