[package]
name = "mooo"
version = "0.1.0"
rust-version = "1.95.0"
edition = "2024"
description = "is your btree imoootable?"
repository = "https://github.com/aethne0/MOOODB"
readme = "README.md"
license-file = "LICENSE"
authors = ["aethne0"]

[dev-dependencies]
rand = { version = "0.10.1", features = ["chacha"] }

[dependencies]
parking_lot = "0.12.5"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

